# SerenProbe

./: .gitignore  README.md  SerenProbe.slnx
SerenProbe/: Dockerfile  ProbeConfig.template.yml  README.md  SerenProbe.pyproj  docker-compose.yml  pyproject.toml  serenprobe.service.sample  serenprobe.yaml.sample
SerenProbe/datasets/: Pilorus_font.pxp  README.md  dnd_generate_datasets.py  dnd_generate_datasets_mini.py  dockererror.md  generate_datasets.py
SerenProbe/datasets/Pilorus/: EvalOutput.md  LintOutput.md  Pilorus.json  Pilorus_loci.yaml  Pilorus_memory.yaml  Pilorus_probe_config.yaml  Pilorus_questions.gen.yaml  Pilorus_questions.yaml  PipeOutput.md
SerenProbe/datasets/aldermoor/: ProbeConfig.yml  ProbeConfig_hard.yml  decoy.yaml  loci.yaml  (+4 more)
SerenProbe/seren_probe/: ProbeConfig.yml  README.md  __init__.py  __main__.py  _version.py  app.py  clean_stores.py  config.py  dataset.py  docker_env.py  evaluators.py  live_eval.py  metrics.py  regrade.py  runner.py  seed_dataset.py  seed_memory_only.py  topology.py  topology_emit.py  tune_scc.py  viewer.py
SerenProbe/tests/: ProbeConfig.yml  compare_loci.py  test_docket.py  test_eval_inputs.py  test_eval_parallel.py  test_healthcheck_grace.py  test_knob_caps.py  test_layering.py  test_lint_cli.py  test_live_import.py  test_live_resolve.py  test_metrics.py  test_question_lint.py  test_regrade_concurrency.py  test_regrade_grid.py  test_regrade_parallel.py  test_regrades.py  test_resolve.py  test_seed_dataset.py  test_seed_flat.py  test_seed_parallel.py  test_seed_plan.py  test_topo_eval.py  test_topology.py  test_topology_emit.py  test_topology_schema.py  test_write_guard.py
(+237 files in other folders)
